--- a/notebooks/LocalCodeEmissions.ipynb
+++ b/notebooks/LocalCodeEmissions.ipynb
@@ -138,7 +138,7 @@
    "id": "db610d36-17d5-4940-97df-6e0acd8ef6ce",
    "metadata": {},
    "source": [
-    "3. Compare the a non-optimized code snippet with its optimized version."
+    "3. Compare a non-optimized code snippet with its optimized version."
    ]
   },
   {
