--- a/notebooks/RemoteCodeEmissions.ipynb
+++ b/notebooks/RemoteCodeEmissions.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/borisruf/api_emissions_tracker.git"
+    "!pip install git+https://github.com/borisruf/api_emissions_tracker.git#egg=api_emissions_tracker"
    ]
   },
   {
